crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__basic_element.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"<div></div>\")"
---
[
    TokenizerToken {
        start: 1,
        end: 4,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 4,
        end: 4,
        offset: 0,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 7,
        end: 10,
        offset: 0,
        location: CloseTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 11,
        end: 11,
        offset: 0,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
