crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__basic_element_with_text.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"<span>Hello World!</span>\")"
---
[
    TokenizerToken {
        start: 1,
        end: 5,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 5,
        end: 5,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 6,
        end: 18,
        location: Text,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 20,
        end: 24,
        location: CloseTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 25,
        end: 25,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
