crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__double_quote_attribute.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"<div aaa=\\\"a\\\" >\")"
---
[
    TokenizerToken {
        start: 1,
        end: 4,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 5,
        end: 8,
        offset: 0,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 10,
        end: 11,
        offset: 0,
        location: AttrData,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 12,
        end: 12,
        offset: 0,
        location: AttrEnd,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 13,
        end: 13,
        offset: 0,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 14,
        end: 14,
        offset: 0,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
