crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__entities_for_xml_incorrect_after_valid.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"&amp;&gt;&amp&sometext;&uuml\")"
---
[
    TokenizerToken {
        start: 0,
        end: 5,
        offset: 0,
        location: TextEntity,
        code: 38,
        quote: NoValue,
    },
    TokenizerToken {
        start: 5,
        end: 9,
        offset: 0,
        location: TextEntity,
        code: 62,
        quote: NoValue,
    },
    TokenizerToken {
        start: 9,
        end: 13,
        offset: 0,
        location: TextEntity,
        code: 38,
        quote: NoValue,
    },
    TokenizerToken {
        start: 13,
        end: 23,
        offset: 0,
        location: Text,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 23,
        end: 28,
        offset: 0,
        location: TextEntity,
        code: 252,
        quote: NoValue,
    },
    TokenizerToken {
        start: 28,
        end: 28,
        offset: 0,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
