crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__for_multi_byte_entities.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"&NotGreaterFullEqual;\")"
---
[
    TokenizerToken {
        start: 0,
        end: 21,
        location: TextEntity,
        code: 8807,
        quote: NoValue,
    },
    TokenizerToken {
        start: 21,
        end: 21,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
