crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__for_trailing_legacy_entity.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"&timesbar;&timesbar\")"
---
[
    TokenizerToken {
        start: 0,
        end: 10,
        location: TextEntity,
        code: 10801,
        quote: NoValue,
    },
    TokenizerToken {
        start: 10,
        end: 19,
        location: TextEntity,
        code: 215,
        quote: NoValue,
    },
    TokenizerToken {
        start: 19,
        end: 19,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
