crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__no_value_attribute.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"<div aaaaaaa >\")"
---
[
    TokenizerToken {
        start: 1,
        end: 4,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 5,
        end: 12,
        offset: 0,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 12,
        end: 12,
        offset: 0,
        location: AttrEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 13,
        end: 13,
        offset: 0,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
]
