crates/rs_html_parser_tokenizer/tests/snapshots/h2_tokenizer_test__tests__special_title_tag.snap
---
source: crates/rs_html_parser_tokenizer/tests/h2_tokenizer_test.rs
expression: "tokenize(\"<style /><div></div>\")"
---
[
    TokenizerToken {
        start: 1,
        end: 6,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 8,
        end: 8,
        offset: 0,
        location: SelfClosingTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 10,
        end: 13,
        offset: 0,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 13,
        end: 13,
        offset: 0,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 16,
        end: 19,
        offset: 0,
        location: CloseTag,
        code: 0,
        quote: NoValue,
    },
]
